crates/squealy/tests/compile_fail/aggregate_rejected_in_returning.stderr
error[E0271]: type mismatch resolving `<Expr<'_, CountExpr<ItemId>, AggregateExprAst<ColumnExprAst<ItemId>>> as ProjectionClass>::Class == ScalarProjection`
  --> tests/compile_fail/aggregate_rejected_in_returning.rs:17:10
   |
17 |         .insert_returning(|item| item.id.count());
   |          ^^^^^^^^^^^^^^^^ expected `ScalarProjection`, found `AggregateProjection`
   |
note: required by a bound in `__SquealyItemWriteBuilder::<'conn, Conn, Assignments, Filters, FilterState>::insert_returning`
  --> tests/compile_fail/aggregate_rejected_in_returning.rs:4:35
   |
 4 | #[derive(Clone, Debug, PartialEq, Table)]
   |                                   ^^^^^ required by this bound in `__SquealyItemWriteBuilder::<'conn, Conn, Assignments, Filters, FilterState>::insert_returning`
   = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)
